--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                 <button type="submit" id="copy"><i class="fa-solid fa-copy"></i></button>
             </div>
         </div>
+        <div class="footer">
+            <h4>
+                Created by - <a href="https://github.com/adiyadav123" target="_blank">Aditya</a>
+            </h4>
+        </div>
         </div>
 
     <script src="./dist/bundle.js"></script>
